force-app/main/default/objects/SDM_Rule__c/SDM_Rule__c.object-meta.xml
<CustomObject>
    <label>SDM Rule</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Abuse Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SDM Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>