force-app/main/default/objects/SDM_Rule__c/fields/Abuse_Name__c.field-meta.xml
<CustomField>
    <fullName>Abuse_Name__c</fullName>
    <label>Abuse Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Abuse_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suspicious death of a child due to abuse</fullName>
            </value>
            <value>
                <fullName>Non-accidental physical injury</fullName>
            </value>
            <value>
                <fullName>Injury inconsistent with explanation</fullName>
            </value>
            <value>
                <fullName>Injury that appears suspicious</fullName>
            </value>
            <value>
                <fullName>Giving child toxic chemicals,alcohol</fullName>
            </value>
            <value>
                <fullName>Caregiver action that caused injury</fullName>
            </value>
            <value>
                <fullName>Suspicious death of child due to neglect</fullName>
            </value>
            <value>
                <fullName>signs or diagnosis of non-organic</fullName>
            </value>
            <value>
                <fullName>Inadequate of food/nutrition</fullName>
            </value>
            <value>
                <fullName>Exposure to unsafe</fullName>
            </value>
            <value>
                <fullName>Inadequate clothing or hygiene</fullName>
            </value>
            <value>
                <fullName>Inadequate supervision</fullName>
            </value>
            <value>
                <fullName>A child discharged from a facility</fullName>
            </value>
            <value>
                <fullName>Physical treatment of the child poses</fullName>
            </value>
            <value>
                <fullName>The caregiver does not intervene despite</fullName>
            </value>
            <value>
                <fullName>A child of any age has been abandoned</fullName>
            </value>
            <value>
                <fullName>A child of any age who is physically</fullName>
            </value>
            <value>
                <fullName>A child under 8 &amp; has been left alone</fullName>
            </value>
            <value>
                <fullName>A child over the age of 8 has been left</fullName>
            </value>
            <value>
                <fullName>The unreasonable delay</fullName>
            </value>
            <value>
                <fullName>Abuse child has an observable, identifi</fullName>
            </value>
            <value>
                <fullName>Neglect child has an observable, identif</fullName>
            </value>
            <value>
                <fullName>Sexual molestation of a child</fullName>
            </value>
            <value>
                <fullName>Sexual act(s) among siblings or other</fullName>
            </value>
            <value>
                <fullName>Sexual exploitation of a child</fullName>
            </value>
            <value>
                <fullName>Physical, behavioral, or suspicious</fullName>
            </value>
            <value>
                <fullName>Harm Risk of Sex Trafficking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>