force-app/main/default/objects/SDM_Rule__c/fields/Abuse_Type__c.field-meta.xml
<CustomField>
    <fullName>Abuse_Type__c</fullName>
    <label>Abuse Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical Abuse</fullName>
            </value>
            <value>
                <fullName>Neglect</fullName>
            </value>
            <value>
                <fullName>Sexual Abuse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>