force-app/main/default/objects/SDM_Rule__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>SDM Rules</relationshipLabel>
    <relationshipName>SDM_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>