force-app/main/default/objects/SDM_Rule__c/fields/X33448__c.field-meta.xml
<CustomField>
    <fullName>X33448__c</fullName>
    <label>33448</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>EDITABLE</fullName>
            </value>
            <value>
                <fullName>CLICK&amp;EDIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>