force-app/main/default/objects/SDM_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Abuse_Name__c</columns>
    <columns>CPS_Response_Type__c</columns>
    <columns>Intake__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>